force-app/main/default/objects/Activity/fields/ActualElapsedTimeInMins__c.field-meta.xml
<CustomField>
    <fullName>ActualElapsedTimeInMins__c</fullName>
    <label>ActualElapsedTimeInMins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>