force-app/main/default/objects/Activity/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>