force-app/main/default/objects/Activity/fields/Call_Log_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Log 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>