force-app/main/default/objects/Activity/fields/Call_Log_2__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Log 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>