force-app/main/default/objects/Activity/fields/CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>CallStartTime__c</fullName>
    <description>Call Start Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>