force-app/main/default/objects/Activity/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <formula>IF(TEXT(Status) == &apos;Completed&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCompleted</label>
    <type>Checkbox</type>
</CustomField>