force-app/main/default/objects/Activity/fields/IsViolated__c.field-meta.xml
<CustomField>
    <fullName>IsViolated__c</fullName>
    <formula>ActualElapsedTimeInMins__c &gt; TargetResponseInMins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsViolated</label>
    <type>Checkbox</type>
</CustomField>