force-app/main/default/objects/Activity/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLA1</fullName>
            </value>
            <value>
                <fullName>SLA2</fullName>
            </value>
            <value>
                <fullName>SLA3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>