force-app/main/default/objects/Activity/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>ACD Queue  Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Name</label>
    <length>96</length>
    <type>Text</type>
</CustomField>