force-app/main/default/objects/Activity/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>