force-app/main/default/objects/Activity/fields/StoppedTimeInMins__c.field-meta.xml
<CustomField>
    <fullName>StoppedTimeInMins__c</fullName>
    <label>StoppedTimeInMins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>