force-app/main/default/objects/Activity/fields/TargetDate__c.field-meta.xml
<CustomField>
    <fullName>TargetDate__c</fullName>
    <label>Target Date</label>
    <type>DateTime</type>
</CustomField>