force-app/main/default/objects/Activity/fields/TargetResponseInMins__c.field-meta.xml
<CustomField>
    <fullName>TargetResponseInMins__c</fullName>
    <label>TargetResponseInMins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>