force-app/main/default/objects/Activity/fields/testActivity__c.field-meta.xml
<CustomField>
    <fullName>testActivity__c</fullName>
    <label>testActivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>