force-app/main/default/objects/Activity/fields/UUI__c.field-meta.xml
<CustomField>
    <fullName>UUI__c</fullName>
    <description>User to User 
Information 
(UUI)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UUI</label>
    <length>96</length>
    <type>Text</type>
</CustomField>